--- a/Proyecto_CBARBA_MAOCHOA.ipynb
+++ b/Proyecto_CBARBA_MAOCHOA.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(r'C:\\Users\\Caro\\Documents\\Carolina\\Semestre 7\\SPF\\Proyecto_CBarba_MOchoa\\diabetes.csv') #imporatción de datos\n",
+    "data = pd.read_csv(r'C:\\Users\\Caro\\Documents\\Carolina\\Semestre 7\\SPF\\Proyecto_CBARBA_MAOCHOA\\diabetes.csv') #imporatción de datos\n",
     "data.head()"
    ]
   },
